# vniira

./: ArgParser.h  BufferProcessors.h  CMakeLists.txt  README.md  ResultAccumulator.h  StrNumber.cc  StrNumber.h  ThreadPool.cc  ThreadPool.h  main.cpp  numbers_light.txt
.github/workflows/: cmake.yml
cmake/: FetchGTest.cmake  FindSphinx.cmake  PackageInfo.cmake  ProjectCommonConfigs.cmake
doc/: CMakeLists.txt  conf.py.in  index.rst
include/arg_parser/: ArgParser.h  arg_parser.h
include/buffer_pool/: buffer_pool.h
include/buffer_processor/: BufferProcessors.h  buffer_processors.h
include/result_accumulator/: ResultAccumulator.h  result_accumulator.h
include/str_number/: str_number.h
include/thread_pool/: thread_pool.h
src/: CMakeLists.txt  StrNumber.cc  ThreadPool.cc  main.cpp
src/arg_parser/: CMakeLists.txt  arg_parser.cc
src/buffer_pool/: CMakeLists.txt  buffer_pool.cc
src/buffer_processor/: CMakeLists.txt  buffer_processor.cc
src/str_number/: CMakeLists.txt  str_number.cc
src/thread_pool/: CMakeLists.txt  thread_pool.cc
test/: CMakeLists.txt
test/arg_parser/: CMakeLists.txt  arg_parser_test.cc
test/buffer_pool/: CMakeLists.txt  buffer_pool_test.cc
test/buffer_processor/: CMakeLists.txt  buffer_processor_test.cc
test/result_accumulator/: CMakeLists.txt  result_accumulator_test.cc
test/test_numbers/: numbers.csv  numbers_long.txt  numbers_small_and_negative.txt
